<resources>
    <string name="app_name">PILL CHECK</string>
    <string name="action_settings">Settings</string>

    <!--Navigation Menu Title-->
    <string name="nav_title_home">홈</string>
    <string name="nav_title_history">복용 내역 관리</string>
    <string name="nav_title_statistics">내역 통계</string>
    <string name="nav_title_search">약품 검색</string>
    <string name="nav_title_settings">설정</string>

    <!--Navigation View Animation-->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="dosage_type">
        <item id="everyDay">매일</item>
        <item id="2Day">2일</item>
        <item id="3Day">3일</item>
        <!--<item id="week">요일</item>-->
        <item id="everyTime">시간마다</item>
    </string-array>

    <string-array name="dosage_time_interval">
        <item id="hour_one">1시간</item>
        <item id="hour_two">2시간</item>
        <item id="hour_three">3시간</item>
        <item id="hour_four">4시간</item>
        <item id="hour_five">5시간</item>
    </string-array>

    <string-array name="dosage_time_count">
        <item id="count_one">1회</item>
        <item id="count_two">2회</item>
        <item id="count_three">3회</item>
        <item id="count_four">4회</item>
        <item id="count_five">5회</item>
        <item id="count_six">6회</item>
        <item id="count_seven">7회</item>
        <item id="count_eight">8회</item>
    </string-array>

    <string name="title_activity_regist">약 등록</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="title_activity_history_detail">복용 내역 상세정보</string>

    <string name="please_wait">로딩중...</string>

</resources>
